--- a/hep-ph-0609174/FTSM.tex
+++ b/hep-ph-0609174/FTSM.tex
@@ -260,8 +260,8 @@ bookmarksopenlevel=10
     the theory. It is a complex scalar field and a doublet of weak isospin. It couples 
     left- and right-handed fermions together.
 
-    Written in terms of these fields, the Lagrangean of the theory is rather simple: 
-    \begin{align}\label{eq:smlagrangean1}
+    Written in terms of these fields, the Lagrangian of the theory is rather simple: 
+    \begin{align}\label{eq:smLagrangian1}
       \begin{split}
         \L&= -\frac{1}{2} \tr \left[F_{\mu\nu} F^{\mu\nu}\right] +\overline{\Psi}_L \i \gamma^\mu
         D_\mu \Psi_L +\tr \left[\left(D_\mu \Phi\right)^\dagger D^\mu \Phi\right]\\
@@ -281,7 +281,7 @@ bookmarksopenlevel=10
     is generally expected at the LHC.
 
     \section{Phenomenological Aspects}
-    The standard model Lagrangean~(\ref{eq:smlagrangean1}) has a rich
+    The standard model Lagrangian~(\ref{eq:smLagrangian1}) has a rich
     structure which has led to different areas of research in particle physics:
     \begin{itemize}
       \item The gauge group is composed of three subgroups with different properties:
@@ -343,7 +343,7 @@ bookmarksopenlevel=10
       Quantum mechanics is obtained from classical mechanics by a method called
       quantisation. Consider for example a particle moving in one dimension along a trajectory
       $q(t)$, with velocity $\dot{q}(t)$ (see Fig.~\ref{fig:onedim}). Its motion can be calculated
-      in the Lagrangean or the Hamiltonian approach. The Lagrange 
+      in the Lagrangian or the Hamiltonian approach. The Lagrange 
       function $L(q,\dot{q})$\index{Lagrange function} is a function of the position and the
       velocity of the particle, 
       usually just the kinetic minus the potential energy. The equation of motion is obtained by
@@ -727,13 +727,13 @@ bookmarksopenlevel=10
       conjugate momentum variables and impose commutation relations among them.
 
       Let us consider the Lagrange density\index{Lagrange density}
-      for a complex scalar field $\phi$. Like the Lagrangean in classical mechanics, the
+      for a complex scalar field $\phi$. Like the Lagrangian in classical mechanics, the
       free Lagrange density is just the kinetic minus the potential energy density,
       \begin{align}\label{eq:Lscalarfree}
         \L&= \partial_\mu \phi^\dagger \partial^\mu \phi- m^2 \phi^\dagger \phi\,.
       \end{align}
       
-      The Lagrangean has a $\mathsf{U(1)}$-symmetry, i.e.,
+      The Lagrangian has a $\mathsf{U(1)}$-symmetry, i.e.,
       under the transformation of the field 
       \begin{align}
         \phi\to\phi'= e^{\i \alpha} \phi\,,\quad \alpha=\const\,,
@@ -756,7 +756,7 @@ bookmarksopenlevel=10
       vanish at spatial infinity, the surface term vanishes.
 
       Now we need to construct the ``momentum'' $\pi(x)$ conjugate to the field $\phi$. Like in
-      classical mechanics, it is given by the derivative of the Lagrangean with respect to the time
+      classical mechanics, it is given by the derivative of the Lagrangian with respect to the time
       derivative of the field,
       \begin{align}\index{Conjugate momentum!for scalar fields}
         \pi (x)&=\frac{\partial \L}{\partial\dot{\phi}(x)}=\dot{\phi}^\dagger(x)\,, & \pi^\dagger
@@ -775,13 +775,13 @@ bookmarksopenlevel=10
 
       These relations are satisfied by the field operator defined in Eq.~(\ref{eq:fieldoperator})
       via the (anti)particle creation and annihilation operators. Its field equation can be derived
-      from the Lagrangean,
+      from the Lagrangian,
       \begin{align}
         \partial_\mu \frac{\partial \L}{\partial(\partial_\mu \phi)} -\frac{\partial \L}{\partial
           \phi}&=\left(\Box+m^2\right) \phi^\dagger =0 \,.      
       \end{align}
       
-      From the Lagrangean and the momentum, we can also construct the Hamiltonian density, 
+      From the Lagrangian and the momentum, we can also construct the Hamiltonian density, 
       \begin{align}
         \mathscr{H}&= \pi \dot{\phi} +\pi^\dagger \dot{\phi}^\dagger- \L = \pi^\dagger \pi
         +\left(\vec{\nabla} \phi^\dagger\right)\left(\vec{\nabla} \phi\right) +m^2\phi^\dagger
@@ -830,7 +830,7 @@ bookmarksopenlevel=10
       Various rules and identities related to $\gamma$-matrices are collected in
       Appendix~\ref{sec:algebra-appendix}. 
       
-      The Lagrangean for a free fermion contains, just as for a scalar, the kinetic term and the
+      The Lagrangian for a free fermion contains, just as for a scalar, the kinetic term and the
       mass:
       \begin{align}
         \L&= \psib \i\dslash\psi -m \psib \psi \,.
@@ -847,7 +847,7 @@ bookmarksopenlevel=10
         derivative from $\psi$ to $\psib$ via integration by parts. This slightly modifies the
         computation, but the result is still the same.}
 
-      The Lagrangean again has a $\mathsf{U(1)}$-symmetry, the multiplication of $\psi$ by a constant 
+      The Lagrangian again has a $\mathsf{U(1)}$-symmetry, the multiplication of $\psi$ by a constant 
       phase,
       \begin{align}
         \psi\to\psi' =e^{\i\alpha} \psi\,, \qquad \psib\to\psib'=e^{-\i\alpha}\psib\,,
@@ -1066,7 +1066,7 @@ bookmarksopenlevel=10
            -\frac{\lambda}{4!}\phi^4 \,.  
          \end{split}
        \end{align}
-       $\L_0$ is the free Lagrangean, containing kinetic and mass term, while $\L_\text{I}$ is the
+       $\L_0$ is the free Lagrangian, containing kinetic and mass term, while $\L_\text{I}$ is the
        interaction term, whose strength is given by the dimensionless coupling constant $\lambda$. 
         
         In perturbation theory we can calculate various physical quantities, in particular
@@ -1306,9 +1306,9 @@ bookmarksopenlevel=10
 
         \subsection{Fermions} 
         We can augment the theory by adding a fermionic field $\psi$, with
-        a Lagrangean including an interaction with the scalar $\phi$,
+        a Lagrangian including an interaction with the scalar $\phi$,
         \begin{align}
-          \L_\psi&= \underbrace{\psib\left(\i\dslash -m\right) \psi}_\text{free Lagrangean} -
+          \L_\psi&= \underbrace{\psib\left(\i\dslash -m\right) \psi}_\text{free Lagrangian} -
           \underbrace{g \psib \phi \psi}_\text{interaction}\,.
         \end{align}
         
@@ -1409,14 +1409,14 @@ bookmarksopenlevel=10
     gauge theories.
     
     \section{Global Symmetries v Gauge Symmetries}
-      Consider a complex scalar field with the Lagrangean
+      Consider a complex scalar field with the Lagrangian
       \begin{align}\label{eq:Lscalar}
         \L&=\partial_\mu \phi^\dagger \partial^\mu - V\!\left(\phi^\dagger\phi\right)\,,
       \end{align}
       which is a generalisation of the one considered in Eq.~(\ref{eq:Lscalarfree}). This theory has a
       $\mathsf{U(1)}$ symmetry under which $\phi\to\phi' = \exp\!\left\{\i\alpha\right\}\phi$ with
       constant parameter $\alpha$. Usually it is sufficient to consider the variation of the fields
-      and the Lagrangean under infinitesimal transformations,
+      and the Lagrangian under infinitesimal transformations,
       \begin{align}\label{eq:scalar_u1}
         \delta\phi &= \phi' -\phi = \i \alpha \phi \,,\qquad
         \delta\phi^\dagger= -\i\alpha \phi^\dagger\,,
@@ -1424,7 +1424,7 @@ bookmarksopenlevel=10
       
       where terms $\mathcal{O}\left(\alpha^2\right)$ have been neglected.
       To derive the Noether current\index{Noether current}, Eq.~(\ref{eq:Noetherscalar}), we
-      compute the variation of the Lagrangean under such a transformation:
+      compute the variation of the Lagrangian under such a transformation:
       
       \begin{align}\label{eq:derivation}
         \begin{split}
@@ -1447,7 +1447,7 @@ bookmarksopenlevel=10
           &=-\alpha \partial_\mu j^\mu \,.
         \end{split}
       \end{align}
-      Since the Lagrangean is invariant, $\delta\L = 0$, we obtain a conserved current for 
+      Since the Lagrangian is invariant, $\delta\L = 0$, we obtain a conserved current for 
       solutions of the equations of motion,
       \begin{align}    
         \partial_\mu j^\mu =0\,.
@@ -1461,16 +1461,16 @@ bookmarksopenlevel=10
       \end{align}
       by the Leibniz rule. 
 
-      The above procedure can be generalised to more complicated Lagrangeans and
+      The above procedure can be generalised to more complicated Lagrangians and
       symmetries. The derivation does not depend on the precise form of $\L$, and up to the second
       line of (\ref{eq:derivation}), it is independent of the form of $\delta \phi$. As a general
-      result, a symmetry of the Lagrangean always implies a conserved current, which in turn gives a
+      result, a symmetry of the Lagrangian always implies a conserved current, which in turn gives a
       conserved quantity (often referred to as charge, but it can be angular momentum or energy as
       well). 
       
       What is the meaning of such a symmetry? Loosely speaking, it states that ``physics does not
       change'' under such a transformation. This, however, does not mean that the solutions to the
-      equations of motion derived from this Lagrangean are invariant under such a
+      equations of motion derived from this Lagrangian are invariant under such a
       transformation. Indeed, generically they are not, and only $\phi\equiv 0$ is invariant.
 
       As an example, consider the Mexican hat potential\index{Mexican hat potential},
@@ -1504,12 +1504,10 @@ bookmarksopenlevel=10
       to transformed final states'': If one applies the transformation to the initial state and
       performs the experiment, the result will be the same as if one had done the experiment with
       the untransformed state and transformed the result.
-    
-      \medskip
-      
+          
       There is a subtle, but important, difference between this and another type of symmetry,
-      gauge symmetry.  A gauge transformation is also a transformation which leaves the Lagrangean
-      invariant, but it does relate identical states which describe exactly the same
+      gauge symmetry.  A gauge transformation is also a transformation which leaves the Lagrangian
+      invariant, but it relates non-identical states which describe exactly the same
       physics.
       
       This might be familiar from electrodynamics. One formulation uses electric and magnetic
@@ -1562,9 +1560,9 @@ bookmarksopenlevel=10
 
     \section{Abelian Gauge Theories}
       The easiest way to come up with a gauge symmetry is to start from a global symmetry and promote
-      it to a gauge one, that is, demand invariance of the Lagrangean under local
+      it to a gauge one, that is, demand invariance of the Lagrangian under local
       transformations (where the transformation parameter is a function of spacetime). To see
-      this, recall the Lagrangean with the global $\mathsf{U(1)}$ symmetry from the preceding
+      this, recall the Lagrangian with the global $\mathsf{U(1)}$ symmetry from the preceding
       section, 
       \begin{align*}
         \L&=\partial_\mu \phi^\dagger \partial^\mu\phi - V(\phi^\dagger\phi)\,,
@@ -1574,9 +1572,9 @@ bookmarksopenlevel=10
         \phi&\to\phi' = e^{\i\alpha} \phi\,,\quad \delta\phi = \phi'-\phi = \i \alpha \phi\,.
       \end{align*}
       
-      If we now allow spacetime dependent parameters $\alpha(x)$, the Lagrangean is no longer
+      If we now allow spacetime dependent parameters $\alpha(x)$, the Lagrangian is no longer
       invariant. The potential part still is, but the kinetic term picks up derivatives of
-      $\alpha(x)$, so the variation of the Lagrangean is
+      $\alpha(x)$, so the variation of the Lagrangian is
       \begin{align}
         \delta \L&= \i \partial_\mu \alpha \left(\partial^\mu\phi^\dagger \phi -\phi^\dagger
           \partial^\mu \phi\right) = -\partial_\mu\alpha \,j^\mu\,,
@@ -1584,7 +1582,7 @@ bookmarksopenlevel=10
       the derivative of $\alpha$ times the Noether current of the global symmetry derived
       before. 
 
-      The way to restore invariance of the Lagrangean is to add another field, the gauge
+      The way to restore invariance of the Lagrangian is to add another field, the gauge
       field, with a gauge transformation just like the electromagnetic potentials in the previous
       section, combined into a four-vector $A^\mu=(\phi,\vec{A})$:
       \begin{align}\label{eq:abeliantrafo}
@@ -1607,7 +1605,7 @@ bookmarksopenlevel=10
           &= e^{\i\alpha(x)}D_\mu \phi\,.
         \end{split}
       \end{align}
-      So we can construct an invariant Lagrangean from the field and its covariant derivative:
+      So we can construct an invariant Lagrangian from the field and its covariant derivative:
       \begin{align}
         \L&=\left(D_\mu \phi\right)^\dagger \left(D^\mu \phi\right) -
         V\left(\phi^\dagger\phi\right)\,.
@@ -1663,9 +1661,9 @@ bookmarksopenlevel=10
       \begin{align}
         \psi&\to\psi' = e^{\i\alpha} \psi\,.
       \end{align}
-      In the Lagrangean, one again replaces the ordinary derivative with the covariant one. The
-      Lagrangean for a fermion coupled to a $\mathsf{U(1)}$ gauge field is quantum
-      electrodynamics~(QED), if we call the fields electron and photon:\index{Lagrangean!QED}
+      In the Lagrangian, one again replaces the ordinary derivative with the covariant one. The
+      Lagrangian for a fermion coupled to a $\mathsf{U(1)}$ gauge field is quantum
+      electrodynamics~(QED), if we call the fields electron and photon:\index{Lagrangian!QED}
       \begin{align}
         \L_\text{QED}&= -\frac{1}{4} F_{\mu\nu} F^{\mu\nu} +\psib\left(\i \Dslash -m\right) \psi \,.
       \end{align}
@@ -1679,7 +1677,7 @@ bookmarksopenlevel=10
           q e A_\mu\right) \psi_q\,.
       \end{align}
       
-      What have we done so far? We started from a Lagrangean, Eq.~(\ref{eq:Lscalar}) with a
+      What have we done so far? We started from a Lagrangian, Eq.~(\ref{eq:Lscalar}) with a
       global $\mathsf{U(1)}$ symmetry (\ref{eq:scalar_u1}). We imposed invariance under local
       transformations, so we had to introduce a new field, the gauge field $A_\mu$. This
       field transformed inhomogeneously under gauge transformations, just in a way to make a
@@ -1688,7 +1686,7 @@ bookmarksopenlevel=10
       a dynamical theory, we added a kinetic term for the gauge field, using the field strength
       tensor. Alternatively, we could have started with the gauge field and tried to couple it to
       other fields, and we would have been led to the transformation properties
-      (\ref{eq:scalar_u1}).  This is all we need to construct the Lagrangean for QED. For QCD
+      (\ref{eq:scalar_u1}).  This is all we need to construct the Lagrangian for QED. For QCD
       and the electroweak theory, however, we need a richer structure: non-Abelian gauge theories.
         
         
@@ -1748,7 +1746,7 @@ bookmarksopenlevel=10
         \left(\Phi^\dagger\right)'=\Phi^\dagger U^\dagger \,.
       \end{align}
       Now we see why we want unitary matrices $U$: A product $\Phi^\dagger\Phi$ is
-      invariant under such a transformation. This means that we can generalise the Lagrangean
+      invariant under such a transformation. This means that we can generalise the Lagrangian
       (\ref{eq:Lscalar}) in a straightforward way to include a non-Abelian symmetry:
       \begin{align}
         \L&= \left(\partial_\mu \Phi\right)^\dagger\!\left(\partial^\mu \Phi\right)
@@ -1818,7 +1816,7 @@ bookmarksopenlevel=10
         F_{\mu\nu}&\to F_{\mu\nu}'= U F_{\mu\nu} U^{-1}\,,
       \end{align}
       i.e., it is covariant. There is an easy way to produce an invariant quantity out of this:
-      the trace. Since  $\tr A B =\tr B A$, the  Lagrangean\index{Lagrangean!Non-Abelian gauge field}
+      the trace. Since  $\tr A B =\tr B A$, the  Lagrangian\index{Lagrangian!Non-Abelian gauge field}
       \begin{align}
         \L&= -\frac{1}{2} \tr \left(F_{\mu\nu} F^{\mu\nu}\right) = -\frac{1}{4} F_{\mu\nu}^a F^{a\;\mu\nu}
       \end{align}
@@ -1832,7 +1830,7 @@ bookmarksopenlevel=10
       term. 
       
       By choosing the gauge group $\suthree$ and coupling the gauge field to fermions, the quarks,
-      we can write down the Lagrangean of quantum chromodynamics~(QCD):\index{Lagrangean!QCD} 
+      we can write down the Lagrangian of quantum chromodynamics~(QCD):\index{Lagrangian!QCD} 
       \begin{align}
         \L_\text{QCD}&= -\frac{1}{4} G_{\mu\nu}^a G^{a\;\mu\nu} +\ol{q} \left(\i \Dslash
           -m\right)q \,,
@@ -1865,7 +1863,7 @@ bookmarksopenlevel=10
       
       
       A better way makes use of Faddeev--Popov ghosts\index{Faddeev--Popov ghosts}. In this approach, we add 
-      two terms to the Lagrangean, the gauge-fixing term and the ghost term. The gauge-fixing term
+      two terms to the Lagrangian, the gauge-fixing term and the ghost term. The gauge-fixing term
       is not gauge invariant, but rather represents a certain gauge condition which can be chosen
       freely. The fact that it is not gauge invariant means that now the propagator is
       well-defined, but the price to pay is that it propagates too many degrees of freedom, namely
@@ -2306,7 +2304,7 @@ bookmarksopenlevel=10
           regularisation parameter has generally no direct physical meaning.
         \item The second step is renormalisation\index{Renormalisation}. The divergences are
           absorbed into the parameters 
-          of the theory. The key idea is that the ``bare'' parameters which appear in the Lagrangean
+          of the theory. The key idea is that the ``bare'' parameters which appear in the Lagrangian
           are not physical, so they can be divergent. Their divergences are chosen such as to cancel
           the divergences coming from the divergent integrals.
         \item Finally, the regulator is removed. Since all divergences have been absorbed into 
@@ -2370,8 +2368,8 @@ bookmarksopenlevel=10
       dimensionality by a factor of $\mu^\epsilon$, where $\mu$ is an arbitrary parameter of mass
       dimension 1. The mass dimensions of fields and parameters also change.
       They can be derived from the condition that the action, which is the
-      $d$-dimensional integral over the Lagrangean,  be dimensionless. Schematically (i.e.,
-      without all numerical factors), a Lagrangean of gauge fields, scalars and fermions reads
+      $d$-dimensional integral over the Lagrangian,  be dimensionless. Schematically (i.e.,
+      without all numerical factors), a Lagrangian of gauge fields, scalars and fermions reads
       \begin{align}
         \begin{split}
           \L&= \left(\partial_\mu A_\nu\right)^2 +e \partial_\mu A^\mu A_\nu A^\nu + e^2 \left(A_\mu
@@ -2498,12 +2496,12 @@ bookmarksopenlevel=10
 
       \subsection{Renormalisation}
       So far we have isolated the divergences, but they are still there. How do we get rid of
-      them? The crucial insight is that the parameters of the Lagrangean, the ``bare'' parameters,
+      them? The crucial insight is that the parameters of the Lagrangian, the ``bare'' parameters,
       are not observable. Rather, the sum of bare parameters and loop-induced corrections are
       physical. Hence, divergencies of bare parameters  can cancel against divergent loop
       corrections, leaving physical observables finite. 
 
-      To make this more explicit, let us express, as an example, the QED Lagrangean
+      To make this more explicit, let us express, as an example, the QED Lagrangian
       in terms of  bare fields $A^\mu_0$ and $\psi_0$ and bare parameters $m_0$ and
       $e_0$, \index{Bare fields} \index{Bare parameters}
       \begin{align}\label{qed}
@@ -2521,7 +2519,7 @@ bookmarksopenlevel=10
       \begin{align}\label{scale}
        e =e(\mu)\;, \quad  m=m(\mu)\;.
       \end{align}
-      In terms of the renormalized fields and parameters the Lagrangean (\ref{qed}) reads
+      In terms of the renormalized fields and parameters the Lagrangian (\ref{qed}) reads
       \begin{align}
         \begin{split}
           \L &= -\frac{1}{4}\left(\partial_\mu A_\nu -  \partial_\nu A_\mu\right)
@@ -2537,7 +2535,7 @@ bookmarksopenlevel=10
           &\quad - \left(Z_m-1\right) m \psib\psi - \left(Z_1-1\right)e \psib \slash{A}  \psi\;.        
         \end{split}
       \end{align}
-      The counterterms have the same structure as the original Lagrangean and lead to new 
+      The counterterms have the same structure as the original Lagrangian and lead to new 
       vertices in the Feynman rules:
       \index{Feynman rules!counterterms}
       \begin{enumerate}[i.]
@@ -2943,8 +2941,8 @@ bookmarksopenlevel=10
       
       \medskip
       
-      It is often convenient to split the Lagrangean into the free (kinetic) part and the
-      interaction Lagrangean, which takes the form $\left(\text{current}\right)\cdot
+      It is often convenient to split the Lagrangian into the free (kinetic) part and the
+      interaction Lagrangian, which takes the form $\left(\text{current}\right)\cdot
       \left(\text{vector field}\right)$. In the electroweak theory, one has
       \begin{align}\label{eq:LintWY} \index{Electroweak theory!Isospin and hypercharge currents}
         \L_\text{int} &= - g J_{W,\,\mu}^I W^{I\,\mu} - g' J_{Y,\,\mu} B^\mu\;,\\
@@ -3103,7 +3101,7 @@ bookmarksopenlevel=10
       have also shifted the lower component to the vacuum value, so that the dynamical field
       $H\!\left(x\right)$ vanishes in the vacuum.
 
-      In unitary gauge, the Higgs Lagrangean~(\ref{eq:LHiggs}) becomes
+      In unitary gauge, the Higgs Lagrangian~(\ref{eq:LHiggs}) becomes
       \begin{align}
         \begin{split}\label{eq:Lunitarygauge}
           \L &= \frac{\lambda}{2} v^4 \\
@@ -3123,7 +3121,7 @@ bookmarksopenlevel=10
       The first line could be interpreted as vacuum energy density, i.e., a cosmological
       constant. However, such an interpretation is on shaky grounds in quantum field theory, so
       we will ignore this term\footnote{Generally, nothing prevents us from adding an arbitrary
-        constant to the Lagrangean, obtaining any desired ``vacuum energy''. For example, the Higgs
+        constant to the Lagrangian, obtaining any desired ``vacuum energy''. For example, the Higgs
         potential is often written as $\left(\Phi^\dagger\Phi-v^2\right)^2$, so that
         its expectation value vanishes in the vacuum. These potentials just differ by the a shift
         $\sim v^4$, and are indistinguishable within QFT.}. The second line describes a real scalar
@@ -3153,7 +3151,7 @@ bookmarksopenlevel=10
 
       The Higgs mechanism and the diagonalisation of the vector boson mass matrix allow us to 
       rewrite the interaction
-      Lagrangean~(\ref{eq:LintWY}), which was given in terms of the old fields $W^I_\mu$ and $B_\mu$
+      Lagrangian~(\ref{eq:LintWY}), which was given in terms of the old fields $W^I_\mu$ and $B_\mu$
       and their currents~(\ref{eq:Wcurrent}) and~(\ref{eq:Ycurrent}), in terms of the physical field. 
       The
       associated currents are separated into a charged current (for $W^\pm_\mu$) and neutral
@@ -3199,7 +3197,7 @@ bookmarksopenlevel=10
 
       The Higgs mechanism described above is also called spontaneous symmetry
       breaking\index{Spontaneous symmetry breaking}. This term, however, is somewhat misleading:
-      Gauge symmetries are never broken, but only hidden. The Lagrangean~(\ref{eq:Lunitarygauge})
+      Gauge symmetries are never broken, but only hidden. The Lagrangian~(\ref{eq:Lunitarygauge})
       only has a manifest $\mathsf{U(1)}$ symmetry associated with the massless vector field, so it
       seems we have lost three gauge symmetries. This, however, is just a consequence of
       choosing the unitary gauge. The Higgs mechanism can also be described in a manifestly
@@ -3235,7 +3233,7 @@ bookmarksopenlevel=10
 
       These Yukawa couplings effectively turn into mass terms once the electroweak symmetry is
       spontaneously broken: A vacuum expectation value $\left<\Phi_X\right>=v$ inserted in the
-      Lagrangean~(\ref{eq:LYukawa}) yields
+      Lagrangian~(\ref{eq:LYukawa}) yields
       \begin{align}
         \L_m &= \left(m_u\right)_{ij} \ol{u}_{\ls\,i}  u_{\rs\,j} +\left(m_d\right)_{ij}
         \ol{d}_{\ls\,i}  d_{\rs\,j} +\left(m_e\right)_{ij} \ol{e}_{\ls\,i}  e_{\rs\,j} + \text{h.c.}\;.
@@ -3953,7 +3951,7 @@ bookmarksopenlevel=10
 
 
         \item A further ``good idea'' was spontaneous symmetry breaking: There can be symmetries of
-           the Lagrangean that are not symmetries of the vacuum.  According to the Goldstone
+           the Lagrangian that are not symmetries of the vacuum.  According to the Goldstone
            theorem there must be a massless spinless particle for every spontaneously broken global 
            symmetry. On the other hand, there is no experimental evidence for any massless scalar 
            with strong or weak interactions. In 1964 Higgs and Englert and Brout found a way to
