--- a/hep-ph-0512377/tasi04_proc_bb.tex
+++ b/hep-ph-0512377/tasi04_proc_bb.tex
@@ -14,9 +14,49 @@
 %% Use \tbl{...} command for table caption i.e. to fit table width.
 %% Use \caption{...} command for figure caption.
 %\documentclass[draft]{ws-procs9x6}  
-\documentclass[prd,preprint,aps,floats,superscriptaddress,floatfix,nofootinbib]{revtex4}
+\documentclass[12pt,prd,onecolumn,aps,floats,superscriptaddress,floatfix,nofootinbib]{revtex4-2}
 \usepackage{url}
 \usepackage{graphicx}
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={7.0in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+
 \begin{document}
 
 
