--- a/hep-ph-0512377/tasi04_proc_bb.tex
+++ b/hep-ph-0512377/tasi04_proc_bb.tex
@@ -372,12 +372,12 @@ functionals introduced in that context, as I did while giving these
 lectures. The detailed explanation of the formalism used would take us
 too far away from our main track}. In this context, the quantum analog
 of the potential $V(\phi)$ is the
-\emph{effective potential} $V_{eff}(\varphi_{cl})$, defined in term of
+\emph{effective potential} $V_{\it eff}(\varphi_{cl})$, defined in term of
 the \emph{effective action} $\Gamma[\phi_{cl}]$ (the generating
 functional of the 1PI connected correlation functions) as:
 \begin{equation}
 \label{eq:v_eff}
-V_{eff}(\varphi_{cl})=-\frac{1}{VT}\Gamma[\phi_{cl}]\,\,\,\,\,\mbox{for}
+V_{\it eff}(\varphi_{cl})=-\frac{1}{VT}\Gamma[\phi_{cl}]\,\,\,\,\,\mbox{for}
 \,\,\,\,\,\phi_{cl}(x)=\mbox{constant}=\varphi_{cl}\,\,\,,
 \end{equation}
 where $VT$ is the space-time extent of the functional integration and
@@ -394,7 +394,7 @@ condition:
 \label{eq:delta_v_eff}
 \frac{\delta}{\delta\phi_{cl}}\Gamma[\phi_{cl}]\bigg|_{\phi_{cl}=\varphi_{cl}}=0
 \,\,\,\,\,\,\,\,\longrightarrow\,\,\,\,\,\,\,\,
-\frac{\partial}{\partial\varphi_{cl}}V_{eff}(\varphi_{cl})=0\,\,\,,
+\frac{\partial}{\partial\varphi_{cl}}V_{\it eff}(\varphi_{cl})=0\,\,\,,
 \end{equation}
 which identifies in particular the states of minimum energy of the
 theory, i.e. the stable vacuum states. A system with spontaneous
@@ -403,14 +403,14 @@ energy. Specifying one of them, as in the classical case, breaks
 the original symmetry on the vacuum. The relation between the
 classical and quantum case is made even more transparent by the
 perturbative form of the effective potential. Indeed,
-$V_{eff}(\varphi_{cl})$ can be organized as a loop expansion and
+$V_{\it eff}(\varphi_{cl})$ can be organized as a loop expansion and
 calculated systematically order by order in $\hbar$:
 \begin{equation}
 \label{eq:veff_exp}
-V_{eff}(\varphi_{cl})=V(\varphi_{cl})+\mbox{loop effects}\,\,\,,
+V_{\it eff}(\varphi_{cl})=V(\varphi_{cl})+\mbox{loop effects}\,\,\,,
 \end{equation}
 with the lowest order being the classical potential in
-Eq.~(\ref{eq:L_phi}). Quantum corrections to $V_{eff}(\varphi_{cl})$
+Eq.~(\ref{eq:L_phi}). Quantum corrections to $V_{\it eff}(\varphi_{cl})$
 affect some of the properties of the potential and therefore
 have to be taken into account in more sophisticated studies of the
 Higgs mechanism for a spontaneously broken quantum gauge theory.  We
@@ -938,7 +938,7 @@ M_H^2>\frac{3v^2}{2\pi^2}y_t^2\log\left(\frac{\Lambda^2}{v^2}\right)\,\,\,.
 \end{equation}
 More accurate analyses include higher order quantum correction in the
 scalar potential and use a 2-loop renormalization group improved
-effective potential, $V_{eff}$, whose nature and meaning has been
+effective potential, $V_{\it eff}$, whose nature and meaning has been
 briefly sketched in Section~\ref{subsec:higgs_mechanism}.
 
 \subsubsection{Indirect bounds from electroweak precision measurements}
@@ -1192,7 +1192,7 @@ coefficient of $\Lambda^2$ is zero, i.e. requiring that:
 \end{equation}
 where the renormalization scale $\mu$ has been arbitrarily set to
 $M_H$ and the order $n$ has been set to $n_{max}$, fixed by the
-required order of loop in the calculation of $V_{eff}$. This is based
+required order of loop in the calculation of $V_{\it eff}$. This is based
 on the fact that higher orders in $n$ come from higher loop effects
 and are therefore suppressed by powers of $(16\pi^2)^{-1}$. Limiting
 $n$ to $n_{max}$, Eq.~(\ref{eq:milder_veltman_condition}) can now have
