--- a/hep-ph-0512377/tasi04_proc_bb.tex
+++ b/hep-ph-0512377/tasi04_proc_bb.tex
@@ -14,7 +14,7 @@
 %% Use \tbl{...} command for table caption i.e. to fit table width.
 %% Use \caption{...} command for figure caption.
 %\documentclass[draft]{ws-procs9x6}  
-\documentclass[12pt,prd,onecolumn,aps,floats,superscriptaddress,floatfix,nofootinbib]{revtex4-2}
+\documentclass[11pt,prd,onecolumn,aps,floats,superscriptaddress,floatfix,nofootinbib]{revtex4-2}
 \usepackage{url}
 \usepackage{graphicx}
 
@@ -611,11 +611,11 @@ self-couplings:
 \begin{tabular}{cc}
 \begin{minipage}{0.5\linewidth}
 \includegraphics[scale=0.6]{3H_coupling}\parbox[b]{4.truecm}
-{{\large $=-3i\frac{M_H^2}{v}$}\vspace{0.75truecm}}
+{{ $=-3i\frac{M_H^2}{v}$}\vspace{0.75truecm}}
 \end{minipage}&
 \begin{minipage}{0.5\linewidth}
 \includegraphics[scale=0.6]{4H_coupling}\parbox[b]{4.truecm}
-{{\large $=-3i\frac{M_H^2}{v^2}$}\vspace{0.75truecm}}
+{{ $=-3i\frac{M_H^2}{v^2}$}\vspace{0.75truecm}}
 \end{minipage}
 \end{tabular}
 \vspace{0.5truecm}
@@ -629,11 +629,11 @@ of the SM Higgs boson to the weak gauge fields:
 \begin{tabular}{cc}
 \begin{minipage}{0.5\linewidth}
 \includegraphics[scale=0.6]{HVV_coupling}\parbox[b]{4.5truecm}
-{{\large $=2i\frac{M_V^2}{v}g^{\mu\nu}$}\vspace{0.75truecm}}
+{{ $=2i\frac{M_V^2}{v}g^{\mu\nu}$}\vspace{0.75truecm}}
 \end{minipage}&
 \begin{minipage}{0.5\linewidth}
 \includegraphics[scale=0.6]{HHVV_coupling}\parbox[b]{4.5truecm}
-{{\large $=2i\frac{M_V^2}{v^2}g^{\mu\nu}$}\vspace{0.75truecm}}
+{{ $=2i\frac{M_V^2}{v^2}g^{\mu\nu}$}\vspace{0.75truecm}}
 \end{minipage}
 \end{tabular}
 \vspace{0.5truecm}
