--- a/1405.3483/1405.3483.tex
+++ b/1405.3483/1405.3483.tex
@@ -534,14 +534,14 @@ the diagonal matrix $\rho^{(\rm D)}$.  But then also $u^{(i)}[g]\,u^{(j)}[g^{-1}
 \begin{equation}
 u^{(i)}[g]\,u^{(j)}[g^{-1}]=c_{ij}[g]{\BM 1}\;.
 \end{equation}
-for some complex numerical coefficients $c_{ij}[g]$.  Taking the determinant of Eq.~(49) gives $(c_{ij}[g])^d={\rm Det}  
-u^{(i)}[g]\,{\rm Det}u^{(j)}[g^{-1}]$.  Now, there must be at least one relevant $j$ for which ${\rm Det}u^{(j)}[g^{-1}] \neq 0$, since otherwise we would have $u^{(i)}[g]\,u^{(j)}[g^{-1}]=0$ for all relevant $i$ and $j$, contradicting Eq.~(44).  Taking $j$ to have any value for which ${\rm Det}u^{(j)}[g^{-1}] \neq 0$, Eq.~(49) then tells us that all relevant $u^{(i)}[g]$ are proportional to a single $u[g]$; specifically,
+for some complex numerical coefficients $c_{ij}[g]$.  Taking the determinant of Eq.~(49) gives $(c_{ij}[g])^d=\mathop{\rm Det}  
+u^{(i)}[g]\,\mathop{\rm Det}u^{(j)}[g^{-1}]$.  Now, there must be at least one relevant $j$ for which $\mathop{\rm Det}u^{(j)}[g^{-1}] \neq 0$, since otherwise we would have $u^{(i)}[g]\,u^{(j)}[g^{-1}]=0$ for all relevant $i$ and $j$, contradicting Eq.~(44).  Taking $j$ to have any value for which $\mathop{\rm Det}u^{(j)}[g^{-1}] \neq 0$, Eq.~(49) then tells us that all relevant $u^{(i)}[g]$ are proportional to a single $u[g]$; specifically,
 \begin{eqnarray}
-u^{(i)}[g]=\Big({\rm Det} u^{(i)}[g]\Big)^{1/d}\times u[g]\;,
+u^{(i)}[g]=\Big(\mathop{\rm Det} u^{(i)}[g]\Big)^{1/d}\times u[g]\;,
 \end{eqnarray}
-where $u[g]=u^{(j)-1}[g^{-1}]\times {\rm \Big(Det}u^{(j)}[g^{-1}]\Big)^{1/d}$.    The trace condition (14) then reads 
-$$ \sum_i \eta^{(i)}[g]\;\left |{\rm Det} u^{(i)}[g]\right|^{2/d} u^\dagger[g]u[g]=1\;,$$
-so the matrix  $U[g]\equiv \left[\sum_i \eta^{(i)}[g]\;\left |{\rm Det} u^{(i)}[g]\right|^{2/d}\right]^{1/2} u[g]$ is unitary, and the transformation rule (13) takes  the familiar form $g(\rho)=U[g]\;\rho\;U^{\dagger}[g]$ of ordinary quantum mechanics, as was to be proved.
+where $u[g]=u^{(j)-1}[g^{-1}]\times \Big({\mathop {\rm Det}}\, u^{(j)}[g^{-1}]\Big)^{1/d}$.    The trace condition (14) then reads 
+$$ \sum_i \eta^{(i)}[g]\;\left |\mathop{\rm Det} u^{(i)}[g]\right|^{2/d} u^\dagger[g]u[g]=1\;,$$
+so the matrix  $U[g]\equiv \left[\sum_i \eta^{(i)}[g]\;\left |\mathop{\rm Det} u^{(i)}[g]\right|^{2/d}\right]^{1/2} u[g]$ is unitary, and the transformation rule (13) takes  the familiar form $g(\rho)=U[g]\;\rho\;U^{\dagger}[g]$ of ordinary quantum mechanics, as was to be proved.
 
 
 
